--- a/movie/css/드라마.css
+++ b/movie/css/드라마.css
@@ -75,7 +75,7 @@ nav a {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  
+
   font-size: 150px;
   font-weight: 900px;
   font-family: "kdg_Medium";
@@ -153,3 +153,47 @@ nav a {
   top: 200px;
   font-size: x-small;
 }
+
+/* 자동 슬라이드 시작 */
+
+.Slidesbackground {
+  margin: 0;
+  padding: 0;
+}
+.slideshow-image {
+  border-radius: 3%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.mySlides {
+  border-radius: 3%;
+  width: 200vh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.5);
+}
+
+.slideshow-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  margin: auto;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.2;
+  }
+  to {
+    opacity: 0.6;
+  }
+}
+/* 자동 슬라이드 끝 */
