--- a/movie/css/만화.css
+++ b/movie/css/만화.css
@@ -63,20 +63,27 @@ nav a {
 
 .hero-in {
   position: absolute;
-  bottom: 350px;
+  bottom: 150px;
   left: 40px;
 }
+.hero-in span {
+}
 .in {
-  font-size: 150px;
-  font-weight: 900px;
-  font-family: "UhBeeMinidori";
+  background-image: linear-gradient(to bottom,#7D02E8, skyblue);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+
+  font-size: 100px;
+  font-weight: 500px;
+  font-family: "Cafe24ClassicType-Regular";
   user-select: none;
 }
 
 @font-face {
-  font-family: "UhBeeMinidori";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_five@.2.0/UhBeeMinidori.woff")
-    format("woff");
+  font-family: "Cafe24ClassicType-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2210-2@1.0/Cafe24ClassicType-Regular.woff2")
+    format("woff2");
   font-weight: normal;
   font-style: normal;
 }
@@ -96,8 +103,8 @@ nav a {
 /* 카드 */
 
 .cards .box-img {
-  width: 200px;
-  height: 300px;
+  width: 400px;
+  height: 500px;
   margin: auto;
   background: gainsboro;
   cursor: pointer;
@@ -115,11 +122,10 @@ nav a {
 }
 
 .translateX:hover .fills {
-  transform: translateX(-100%);
+  transform: translateX(-200%);
 }
 
 /* footer */
-
 .icons {
   position: relative;
 }
@@ -130,7 +136,7 @@ nav a {
   gap: 10px;
   position: absolute;
   top: 100px;
-  left: 920px;
+  left: 990px;
 }
 .texts {
   display: flex;
@@ -144,3 +150,48 @@ nav a {
   top: 200px;
   font-size: x-small;
 }
+
+/* 자동 슬라이드 시작 */
+
+.Slidesbackground {
+  margin: 0;
+  padding: 0;
+}
+.slideshow-image {
+  border-radius: 3%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.mySlides {
+  border-radius: 3%;
+  width: 200vh;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.5);
+}
+
+.slideshow-container {
+  display: flex;
+  justify-content: center;
+  justify-content: center;
+  position: relative;
+  margin: auto;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.2;
+  }
+  to {
+    opacity: 0.6;
+  }
+}
+/* 자동 슬라이드 끝 */
