--- a/movie/css/드라마.css
+++ b/movie/css/드라마.css
@@ -3,6 +3,8 @@
 }
 body,
 html {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -147,6 +149,10 @@ nav a {
   position: relative;
 }
 .icon {
+  position: absolute;
+  left: -0.8%;
+}
+.icon-in {
   display: flex;
   justify-content: center;
   align-items: center;
