--- a/movie/css/만화.css
+++ b/movie/css/만화.css
@@ -3,6 +3,8 @@
 }
 body,
 html {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -143,6 +145,10 @@ nav a {
   position: relative;
 }
 .icon {
+  position: absolute;
+  left: -3%;
+}
+.icon-in {
   display: flex;
   justify-content: center;
   align-items: center;
