--- a/movie/css/예능.css
+++ b/movie/css/예능.css
@@ -3,6 +3,8 @@
 }
 body,
 html {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -136,7 +138,12 @@ nav a {
 .icons {
   position: relative;
 }
+
 .icon {
+  position: absolute;
+  left: -6%;
+}
+.icon-in {
   display: flex;
   justify-content: center;
   align-items: center;
