--- a/if -이프/css/main.css
+++ b/if -이프/css/main.css
@@ -5,33 +5,7 @@ body {
   background-image: linear-gradient(to bottom, #41b8d2, #ffffff);
   padding: 0;
   margin: 0;
-  height: 100%;
   width: 100%;
-}
-
-body {
-  font-family: "Baloo Paaji";
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  display: flex;
-}
-
-.container h1 > span {
-  font-size: 30px;
-  position: absolute;
-  left: -10%;
-  bottom: 76%;
-  user-select: none;
-}
-.container h2 > span {
-  font-size: 30px;
-  position: absolute;
-  left: -10%;
-  bottom: 68%;
 }
 
 /* offcanvas-header */
@@ -46,53 +20,80 @@ body {
   position: absolute;
   left: 250px;
 }
+/* search */
+.search input {
+  border-radius: 20px;
+  width: 700px;
+}
 
-/* 메인 사진 */
-
+/* 메인 */
 .main {
+  width: 100%;
+  height: 100%;
+}
+#content-1 {
   display: flex;
-  position: absolute;
-  top: 30%;
-  right: 25%;
+  margin-top: 86px;
+  height: 100%;
 }
-.main-2 {
-  display: flex;
-  position: absolute;
-  top: 51%;
-  right: 25%;
+
+/* 메인 img */
+
+.front-left .icon {
+  width: 400px;
+  height: 400px;
 }
-.arrow {
-  position: absolute;
-  z-index: 1;
+.front-left p {
+  font-family: "LOTTERIACHAB";
+  font-size: 30px;
 }
-.main_img {
+@font-face {
+  font-family: "LOTTERIACHAB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/LOTTERIACHAB.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+.front-left {
+  width: 50%;
+}
+.front-right {
+  width: 50%;
+  height: 100%;
+}
+/* .front-right {
+  display: grid;
+  grid-template-rows: 200px 200px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+} */
+.main-img img {
+  width: 200px;
+  height: 200px;
+}
+
+/* ease-in-out */
+
+.main-img {
   margin: 0;
   position: relative;
   width: 200px;
   height: 200px;
-  right: -50%;
 }
 
-.main_img img {
+.main-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   transition: filter 0.5s ease-in-out;
 }
-/* 매인 음악 장르종류 검은색 막*/
-.container div > img {
-  position: absolute;
-  left: -10%;
-  bottom: 20%;
-}
 
-.main_img p {
+.main-img p {
   position: absolute;
   opacity: 0;
   width: 100%;
   height: 100%;
-  top: -20%;
-  left: -10%;
+  top: 0;
+  left: 0;
   margin: 0;
   display: flex;
   justify-content: center;
@@ -104,18 +105,12 @@ body {
   transition: opacity 0.5s ease-in-out;
 }
 
-.main_img:hover img {
+.main-img:hover img {
   filter: brightness(50%);
   filter: blur(5px);
   -webkit-filter: blur(5px);
 }
 
-.main_img:hover p {
+.main-img:hover p {
   opacity: 1;
 }
-/* search */
-.search input {
-  border-radius: 20px;
-  width: 700px;
-}
-/* 캐러셀 */
