--- a/if -이프/css/K-pop.css
+++ b/if -이프/css/K-pop.css
@@ -149,14 +149,14 @@ span {
 .left {
   width: 50%;
   height: 100%;
-  margin-left: 20%;
+  
 }
 .right {
   width: 50%;
   height: 100%;
   justify-content: center;
   align-items: center;
-  margin-right: 10%;
+  
 }
 /* 신곡 캐러셀 */
    /* reset */
@@ -192,4 +192,23 @@ span {
    .dot li { float: left; width: 20px; height: 5px; margin: 0 4px; border-radius: 50px; background: #000; opacity: 0.3; text-indent: -9999px; cursor: pointer; }
    .dot li.on { opacity: 1; }
 
-  
+  /* 느낌별 스테이션 */
+  .section-title {
+    font-weight: 700;
+    font-size: 32px;
+    margin: 40px 0;
+  }
+
+  .stations {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* 1fr 1fr 1fr */
+    justify-content: center;
+    gap: 40px;
+  }
+  section {
+    max-width: 1120px;
+    width: 100%;
+    margin: 80px auto;
+    padding: 0 36px;
+  }
