--- a/if -이프/css/sign Up.css
+++ b/if -이프/css/sign Up.css
@@ -1,118 +1,150 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-size: 11px;
-}
-body {
-  background-image: url(https://media.istockphoto.com/id/1220355044/ko/%EC%82%AC%EC%A7%84/%EB%B0%9D%EC%9D%80-%ED%99%94%EB%A0%A4%ED%95%9C-%EB%B0%B0%EA%B2%BD%EC%97%90-%ED%9D%B0%EC%83%89-%ED%97%A4%EB%93%9C%ED%8F%B0%EC%9D%98-%EA%B0%9C%EB%85%90-%EC%9D%B4%EB%AF%B8%EC%A7%80%EC%9E%85%EB%8B%88%EB%8B%A4.jpg?s=612x612&w=0&k=20&c=rxCq05RZAl7AvEBWyD1DzDi-mpInfCb4cFgKpcWPyOM=);
-  background-size: cover;
+/* Google web font CDN*/
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
+
+*{
+    box-sizing: border-box; /*전체에 박스사이징*/
+    outline: none; /*focus 했을때 테두리 나오게 */
 }
 
-html {
-  width: 100%;
-  display: flex;
-  padding-left: 300px;
-  padding-top: 150px;
-  padding-bottom: 20px;
+body{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size:14px;
+    background-color: #f5f6f7;
+    line-height: 1.5em;
+    color : #222;
+    margin: 0;
 }
 
-body {
-  width: 40%;
-  border: 1px solid black;
+a{
+    text-decoration: none;
+    color: #222;
 }
 
-/* 회원가입 */
-input {
-  border: 1px solid black;
-  border-radius: 3px;
-  line-height: 35px;
-  font-size: 12px;
-  padding-left: 10px;
-  padding-right: 10px;
+/*member sign in*/
+.member{
+    width: 400px;
+    /* border: 1px solid #000; */
+    margin: auto; /*중앙 정렬*/
+    padding: 0 20px;
+    margin-bottom: 20px;
 }
 
-.wrapper {
-  padding: 50px;
+.member .logo{
+    /*로고는 이미지라 인라인 블록이니까 마진 오토 안됨 블록요소만 됨 */
+    display: block;
+    margin :50px auto;
 }
 
-div {
-  padding-top: 3px;
-  padding-bottom: 8px;
+.member .field{
+    margin :5px 0; /*상하로 좀 띄워주기*/
 }
 
-.title {
-  text-align: center;
-  font-weight: 700;
+.member b{
+    /* border: 1px solid #000; */
+    display: block; /*수직 정렬하기 */
+    margin-bottom: 5px;
 }
 
-.email input {
-  width: 100%;
-  border-radius: 10PX;
+/*input 중 radio 는 width 가 100%면 안되니까 */
+.member input:not(input[type=radio]),.member select{
+    border: 1px solid #dadada;
+    padding: 15px;
+    width: 100%;
+    margin-bottom: 5px;
 }
 
-.name input {
-  width: 100%;
-  border-radius: 10PX;
+.member input[type=button],
+.member input[type=submit]{
+background-color:lightseagreen;
+color:#fff
 }
 
-.password input {
-  width: 100%;
-  border-radius: 10PX;
+.member input:focus, .member select:focus{
+    border: 1px solid lightseagreen;
 }
 
-.passwordCheck input {
-  width: 100%;
-  border-radius: 10PX;
+.field.birth div{ /*field 이면서 birth*/
+    display: flex;
+    gap:10px; /*간격 벌려줄때 공식처럼 사용핟나 */
 }
 
-.timer {
-  display: flex;
-  justify-content: space-between;
+/* .field.birth div > * {  gap 사용한거랑 같은 효과를 줌 
+    flex:1;
+} */
+
+.field.tel-number div {
+    display: flex;
 }
 
-.auth div {
-  width: 30%;
-  text-align: center;
-  font-weight: 700;
-  font-size: 15px;
+.field.tel-number div input:nth-child(1){
+    flex:2;
 }
 
-.auth button {
-  width: 70%;
+.field.tel-number div input:nth-child(2){
+    flex:1;
 }
 
-.timer div {
-  width: 30%;
-  text-align: center;
-  font-weight: 700;
-  font-size: 15px;
+.field.gender div{
+    border: 1px solid #dadada;
+    padding: 15px 5px;
+    background-color: #fff;
 }
 
-.timer button {
-  width: 70%;
+.placehold-text{
+    display: block; /*span 으로 감싸서 크기영역을 블록요소로 만들어ㅜ저야한다*/
+    position:relative;
+    /* border: 1px solid #000; */
 }
 
-.area select {
-  width: 100%;
-  height: 40px;
+.placehold-text:before{ 
+    content : "@naver.com";
+    position:absolute; /*before은 inline 요소이기 때문에 span으로 감싸줌 */
+    right : 20px;
+    top:13px;
+    pointer-events: none; /*자체가 가지고 있는 pointer event 를 없애준다 */
 }
 
-.gender {
-  text-align: center;
+.userpw{
+    background:url(./images/images2/icon-01.png) no-repeat center right 15px;
+    background-size: 20px;
+    background-color: #fff;
 }
 
-.signUp button {
-  width: 100%;
-  cursor: pointer;
-  
+.userpw-confirm{
+    background:url(./images/images2/icon-02.png) no-repeat center right 15px;
+    background-size: 20px;
+    background-color: #fff;
 }
 
-button {
-  cursor: pointer;
-  height: 30px;
-  background-color:lightcoral;
-  border-radius: 10PX;
-  font-size: 15PX;
-  padding: 5PX;
+.member-footer {
+    text-align: center;
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.member-footer div a:hover{
+    text-decoration: underline;
+    color:lightseagreen
+}
+
+.member-footer div a:after{
+    content:'|';
+    font-size: 10px;
+    color:#bbb;
+    margin-right: 5px;
+    margin-left: 7px;
+    /*살짝 내려가 있기 때문에 위로 올려주기 위해 transform 사용하기*/
+    display: inline-block;
+    transform: translateY(-1px);
+
+}
+
+.member-footer div a:last-child:after{
+    display: none;
+}
+
+@media (max-width:768px) {
+    .member{
+        width: 100%;
+    }
 }
