--- a/if -이프/css/K-pop.css
+++ b/if -이프/css/K-pop.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   width: 100%;
   align-items: center;
-  background: linear-gradient(180deg,#E6516B, #DAA1A4);
+  background: linear-gradient(180deg, #e8b9c1, #daa1a4);
 }
 /* offcanvas-header */
 .offcanvas-header {
@@ -255,8 +255,8 @@ button {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 20px;
-  height: 20px;
+  width: 50px;
+  height: 40px;
   font-size: 0;
   background: none;
   cursor: pointer;
@@ -303,38 +303,11 @@ button {
   opacity: 1;
 }
 
-/* 느낌별 스테이션 */
-.section-title {
-  font-weight: 700;
-  font-size: 32px;
-  margin: 40px 0;
-  margin-left: 80PX;
-}
-
-.stations {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* 1fr 1fr 1fr */
-  justify-content: center;
-  gap: 30px;
-  margin-left: 80PX;
-}
-section {
-  max-width: 1120px;
-  width: 100%;
-  margin: 80px auto;
-  padding: 0 36px;
-}
-section img {
-  border-radius: 50%;
-}
-
 /* 음악재생 */
 .music {
   position: absolute;
   margin-left: 300px;
   margin-top: 20px;
- 
 }
 .music img {
   border-radius: 20px;
@@ -343,5 +316,69 @@ section img {
   position: absolute;
   opacity: 0.5;
   right: 2px;
-  bottom: 10PX;
+  bottom: 10px;
+}
+
+/* 느낌별 스테이션 */
+.section-title {
+  font-weight: 700;
+  font-size: 32px;
+  margin: 40px 0;
+  margin-left: 200px;
+}
+
+.stations {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* 1fr 1fr 1fr */
+  justify-content: center;
+  gap: 30px;
+  margin-left: 200px;
+}
+section {
+  max-width: 1120px;
+  width: 100%;
+  margin: 80px auto;
+  padding: 0 36px;
+  position: relative;
+}
+
+
+
+
+/* ease-in-out */
+.stations {
+  margin: 0;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.station img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: filter 0.5s ease-in-out;
+}
+
+section p {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  
+  
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: lightseagreen;
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: opacity 0.5s ease-in-out;
+}
+section img:hover img {
+  filter: brightness(50%);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+}
+
+section :hover p {
+  opacity: 1;
 }
