--- a/if -이프/css/K-pop.css
+++ b/if -이프/css/K-pop.css
@@ -135,7 +135,7 @@ span {
   position: absolute;
   right: -30px;
   /* top: 45; */
-  
+
   transform: rotate(-45deg) translateY(-50%);
   transition: right 0.15s ease-in-out;
   width: 5px;
@@ -176,6 +176,7 @@ span {
   width: 50%;
   height: 100%;
   position: relative;
+  
 }
 
 .right h2 {
@@ -205,7 +206,7 @@ button {
   width: 300px;
   height: 300px;
   overflow: hidden;
-  margin-left: 300px;
+  margin-left: 200px;
   margin-top: 60px;
 }
 
@@ -305,7 +306,7 @@ button {
   opacity: 1;
 }
 
-/* 음악재생 */
+/* 음악재생
 .music {
   position: absolute;
   margin-left: 300px;
@@ -319,7 +320,7 @@ button {
   opacity: 0.5;
   right: 2px;
   bottom: 10px;
-}
+} */
 
 /* 느낌별 스테이션 */
 .section-title {
@@ -327,6 +328,8 @@ button {
   font-size: 32px;
   margin: 40px 0;
   margin-left: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
 .stations {
@@ -337,14 +340,203 @@ button {
   gap: 30px;
   margin-left: 200px;
 }
+.stations img {
+  border-radius: 50%;
+}
+
 section {
-  max-width: 1120px;
   width: 100%;
   margin: 80px auto;
   padding: 0 36px;
   position: relative;
 }
 
+.station img {
+  width: 400px;
+  height: 400px;
+}
 
+/* ease-in-out */
 
+.station {
+  margin: 0;
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
 
+.stations img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: filter 0.5s ease-in-out;
+}
+
+.stations p {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: lightseagreen;
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: opacity 0.5s ease-in-out;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.station:hover img {
+  filter: brightness(50%);
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+}
+
+.station:hover p {
+  opacity: 1;
+}
+
+/* 뷰 포인트가 480px 이하일 때 */
+@media (max-width:480px) {
+  .gallery-container {
+    align-items: center;
+    display: flex;
+    height: 400px;
+    margin: 0 auto;
+    max-width: 500px;
+    position: relative;
+    margin-top: 200px;
+    margin-left:260px;
+  }
+  .gallery-item {
+    height: 200px;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+    width: 200px;
+    z-index: 0;
+    border-radius: 15px;
+    background-size: contain;
+  }
+  .gallery-item-1 {
+    left: 3%;
+    opacity: 0.4;
+    transform: translateX(-50%);
+  }
+  .gallery-item-2,
+  .gallery-item-4 {
+    height: 150px;
+    opacity: 0.8;
+    width: 188px;
+    z-index: 1;
+  }
+  .gallery-item-2 {
+    left: 10%;
+    transform: translateX(-50%);
+  }
+  .gallery-item-3 {
+    box-shadow: -2px 5px 33px 6px rgb(0, 0, 0, 0.35);
+    height: 200px;
+    opacity: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 230px;
+    z-index: 2;
+  }
+  .gallery-item-4 {
+    left: 80%;
+    transform: translateX(-50%);
+  }
+  .gallery-item-5 {
+    left: 95%;
+    opacity: 0.4;
+    transform: translateX(-50%);
+  }
+  .gallery-controls {
+    display: flex;
+    justify-content: center;
+    margin: 25px 0;
+    margin-top: 20px;
+    height: 100px;
+  }
+  .gallery-controls button {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+    font-size: 30px;
+    margin: 0 50px;
+    padding: 0 12px;
+    text-transform: capitalize;
+  }
+  .gallery-controls-button:focus {
+    outline: none;
+  }
+  .gallery-controls-previous {
+    position: relative;
+  }
+  .gallery-controls-previous::before {
+    border: solid #000;
+    border-width: 0 5px 5px 0;
+    content: "";
+    display: inline-block;
+    height: 5px;
+    left: -30px;
+    padding: 10px;
+    position: absolute;
+    top: 25%;
+    transform: rotate(135deg) translateY(-50%);
+    transition: left 0.15s ease-in-out;
+    width: 5px;
+  }
+  .gallery-controls-previous:hover::before {
+    left: -40px;
+  }
+  .gallery-controls-next {
+    position: relative;
+  }
+  .gallery-controls-next::before {
+    border: solid #000;
+    border-width: 0 5px 5px 0;
+    content: "";
+    display: inline-block;
+    height: 5px;
+    padding: 10px;
+    margin-top: 15px;
+    position: absolute;
+    right: -30px;
+    /* top: 45; */
+  
+    transform: rotate(-45deg) translateY(-50%);
+    transition: right 0.15s ease-in-out;
+    width: 5px;
+  }
+  .gallery-controls-next:hover:before {
+    right: -40px;
+  }
+  .gallery-header {
+    bottom: -15px;
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    position: absolute;
+    width: 100%;
+  }
+  .gallery-header li {
+    background: #ccc;
+    border-radius: 50%;
+    height: 10px;
+    margin: 0 16px;
+    width: 10px;
+  }
+  
+  .gallery-header li.gallery-item-selcted {
+    background: #555;
+  }
+}
